--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "element-ui": "^2.11.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "qs": "^6.7.0",
+    "ts-loader": "^6.2.0",
+    "tslint": "^5.20.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-loader": "^3.5.4",
+    "typescript": "^3.6.4",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-class-component": "^7.1.0",
+    "vue-property-decorator": "^8.2.2",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
